methods.picture.PictureMono2.scala.error
Erreur de compilation :
PictureMono2:19: error: not found: value makePattern
    for (j<-1 to 4) makePattern() ;forward(7)
                    ^